--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --mode serve",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
+    "axios": "^1.4.0",
     "element-plus": "^2.3.5",
     "less": "^4.1.3",
+    "lodash": "^4.17.21",
     "pinia": "^2.0.36",
+    "unplugin-element-plus": "^0.7.1",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
   },
