--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "less": "^4.1.3",
     "lodash": "^4.17.21",
     "pinia": "^2.0.36",
+    "sass": "^1.62.1",
     "unplugin-element-plus": "^0.7.1",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
