--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.4.0",
+    "caniuse-api": "^3.0.0",
     "echarts": "^5.4.2",
     "element-plus": "^2.3.5",
     "less": "^4.1.3",
     "lodash": "^4.17.21",
+    "modernizr": "^3.12.0",
     "pinia": "^2.0.36",
     "sass": "^1.62.1",
     "unplugin-element-plus": "^0.7.1",
@@ -29,6 +31,7 @@
     "@vue/eslint-config-prettier": "^7.1.0",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
+    "modernizr-webpack-plugin": "^1.0.7",
     "prettier": "^2.8.8",
     "vite": "^4.3.5"
   }
